--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
 = C# Circular List =
 
 This is a C# implementation of Circular List.
+
+Moved to https://github.com/hcoona/OneDotNet/tree/master/SharpCircularList
